--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico">
   <title>Сантехникoff </title>
-  <link rel="stylesheet" href="css/style.min.css" type='text/css' rel="preload" as="style">
+  <link rel="stylesheet" href="css/style.min.css" type='text/css'>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
 
                     <li><a href="#!" class="menu__link"><span data-close="close-link">Наименование услуги
                           1</span></a></li>
-                    <hr align="center" width="100%" size="3" color="#EAEAEA">
+
 
                     <li class="menu__one_ower_two"><a href="#!"
                         class="menu__link  menu__link_show_two"><span>Наименование
@@ -91,27 +91,26 @@
 
                           <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 1</span></a></li>
-                          <hr align="center" width="100%" size="3" color="#EAEAEA">
+
                           <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 2</span></a></li>
-                          <hr align="center" width="100%" size="3" color="#EAEAEA">
+
                           <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 3</span></a></li>
-                          <hr align="center" width="100%" size="3" color="#EAEAEA">
+
                           <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 4</span></a></li>
                         </ul>
                       </div><!-- menu__two_wrap -->
 
                     </li>
-                    <hr align="center" width="100%" size="3" color="#EAEAEA">
+
 
                     <li><a href="#!" class="menu__link"><span data-close="close-link">Наименование услуги
                           3</span></a></li>
-                    <hr align="center" width="100%" size="3" color="#EAEAEA">
+
                     <li><a href="#!" class="menu__link"><span data-close="close-link">Наименование услуги
                           4</span></a></li>
-                    <hr align="center" width="100%" size="3" color="#EAEAEA">
 
 
                   </ul>
@@ -135,7 +134,7 @@
 
             <input type="text" name="name" placeholder="Ваше имя">
             <input type="tel" name="phone" pattern="+2-[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="+38-066-123-1234">
-            <textarea name=" Сообщение" name="comment" placeholder="Задайте любой интересующий Вас вопрос"></textarea>
+            <textarea name=" Сообщение" placeholder="Задайте любой интересующий Вас вопрос"></textarea>
             <button type="submit" class="header__form_submit">Заказать выезд</button>
 
           </form>
@@ -161,7 +160,7 @@
               <div class="popap__img">
                 <img src="images/svg/phone.svg" width="70" height="70" alt="Phone">
               </div>
-              <div class="popap__title">Просто оставьте свои данные</div>
+              <h2 class="popap__title">Просто оставьте свои данные</h2>
               <div class="popap__descr">Мастер сам перезвонит в кратчайшие сроки!</div>
               <div class="popap__input">
                 <input type="text" name="name" class="input-name" placeholder="Ваше имя">
@@ -181,7 +180,7 @@
       <div class="masters">
         <div class="container">
           <div class="masters__blocks">
-            <div class="masters__blocks_title">Наши мастера</div>
+            <h1 class="masters__blocks_title">Наши мастера</h1>
             <div class="masters__blocks_wrap">
               <div class="masters__blocks_item">
                 <img src="images/our-master.png" alt="Мастер Сергей">
@@ -247,7 +246,7 @@
 
         <div class="reviews">
           <div class="reviews__blocks_item">
-            <div class="reviews__blocks_item_title">Отзывы довольных клиентов</div>
+            <h2 class="reviews__blocks_item_title">Отзывы довольных клиентов</h2>
 
           </div>
           <div class="reviews__blocks">
@@ -395,7 +394,7 @@
     <section>
       <div class="container">
         <div class="advant">
-          <div class="advant__title">Наши преимущества</div>
+          <h3 class="advant__title">Наши преимущества</h3>
           <div class="advant__wrap">
 
             <div class="advant__item">
@@ -444,8 +443,7 @@
           <div class="advant__map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d164152.76882128857!2d36.14574279364681!3d49.99472774442155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a09f63ab0f8b%3A0x2d4c18681aa4be0a!2z0KXQsNGA0YzQutC-0LIsINCl0LDRgNGM0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0Yw!5e0!3m2!1sru!2sua!4v1610526748072!5m2!1sru!2sua"
-              width="1015" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-              tabindex="0"></iframe>
+              width="1015" height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="advant__form">
               <div class="advant__form_title">Адрес нашей организации</div>
               <div class="advant__form_adress">​Харьков, улица 9 Мая, дом 103
@@ -502,7 +500,7 @@
 
           <div class="footer__block block-two">
             <div class="footer__block_title">Наши услуги:</div>
-            <div class="footer-hr"></div>
+
             <div class="footer__block_menu">
               <ul class="footer-menu-list">
                 <li class="footer-menu__link"><a href="#!"><span>очистка засоров</span></a></li>
@@ -528,7 +526,7 @@
               </div>
               <div class="footer__block_form_title">Мы в соцсетях:</div>
               <div class="footer__form_img">
-                <a href="#!" alt="Вконтакте">
+                <a href="#!">
                   <span class="form__imges"> <img src="images/svg/vk.svg" width="18" height="18" alt="Вконтакте"></span>
                 </a>
 
@@ -590,7 +588,7 @@
 
 
   </div><!-- wrapper -->
-  <script src="js/main.min.js" rel="preload" as="script" defer></script>
+  <script src="js/main.min.js" rel="preload" defer></script>
 </body>
 
 </html>
