--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  shrink-to-fit=no">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="images/favicon.ico">
   <title>Сантехникoff </title>
+  <meta name="description" content="Page Description">
   <link rel="stylesheet" href="css/style.min.css" type='text/css'>
 </head>
 
@@ -21,7 +22,7 @@
             <div class="header__body-wrap">
 
               <a href="index.html" class="header__logo">
-                <span class="logo"><img src="images/logo.png" alt="" /></span>
+                </span><img src="images/logo.png" alt="logo" />
               </a>
 
               <div class="header__bit">Сантехник<span>off </span>
@@ -70,35 +71,35 @@
           <div class="menu__close"><span></span> </div>
           <div class="menu__wrap">
             <ul class="menu__list">
-              <li><a href="#!" class="menu__link "><span>Главная</span></a></li>
-              <li class=" link-ower "><a href="#!" data-ower="close-menu"
+              <li><a href="#" class="menu__link "><span>Главная</span></a></li>
+              <li class=" link-ower "><a href="#" data-ower="close-menu"
                   class="menu__link menu__link_show"><span>услуги
                     &nbsp;<img src="images/svg/arrow.svg" width="12" height="12" alt="Arrow"></span></a>
 
                 <div class="menu__one">
                   <ul class="menu__one_wrap">
 
-                    <li><a href="#!" class="menu__link"><span data-close="close-link">Наименование услуги
+                    <li><a href="#" class="menu__link"><span data-close="close-link">Наименование услуги
                           1</span></a></li>
 
 
-                    <li class="menu__one_ower_two"><a href="#!"
+                    <li class="menu__one_ower_two"><a href="#"
                         class="menu__link  menu__link_show_two"><span>Наименование
                           услуги 2&nbsp;<img src="images/svg/arrow.svg" width="12" height="12" alt="Arrow"></span></a>
 
                       <div class="menu__two_wrap">
                         <ul class="menu__two  ">
 
-                          <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
+                          <li><a href="#" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 1</span></a></li>
 
-                          <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
+                          <li><a href="#" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 2</span></a></li>
 
-                          <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
+                          <li><a href="#" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 3</span></a></li>
 
-                          <li><a href="#!" class="menu__link"><span data-close="close-link">Уровень 2 услуги
+                          <li><a href="#" class="menu__link"><span data-close="close-link">Уровень 2 услуги
                                 4</span></a></li>
                         </ul>
                       </div><!-- menu__two_wrap -->
@@ -106,10 +107,10 @@
                     </li>
 
 
-                    <li><a href="#!" class="menu__link"><span data-close="close-link">Наименование услуги
+                    <li><a href="#" class="menu__link"><span data-close="close-link">Наименование услуги
                           3</span></a></li>
 
-                    <li><a href="#!" class="menu__link"><span data-close="close-link">Наименование услуги
+                    <li><a href="#" class="menu__link"><span data-close="close-link">Наименование услуги
                           4</span></a></li>
 
 
@@ -117,9 +118,9 @@
                 </div><!-- menu__one -->
               </li>
 
-              <li><a href="#!" class="menu__link"><span>очистка засоров</span></a></li>
-              <li><a href="#!" class="menu__link"><span>установка сантехники</span></a></li>
-              <li><a href="#!" class="menu__link"><span>герметизация</span></a></li>
+              <li><a href="#" class="menu__link"><span>очистка засоров</span></a></li>
+              <li><a href="#" class="menu__link"><span>установка сантехники</span></a></li>
+              <li><a href="#" class="menu__link"><span>герметизация</span></a></li>
 
             </ul>
 
@@ -130,7 +131,7 @@
         <div class="header__form">
           <div class="header__form_title">Заказать выезд мастера</div>
           <p class="header__form_desc">Просто оставьте свои контакты: мастер сам перезвонит в кратчайшие сроки!</p>
-          <form action="#!" name="master" class="header__form_block">
+          <form action="#" name="master" class="header__form_block">
 
             <input type="text" name="name" placeholder="Ваше имя">
             <input type="tel" name="phone" pattern="+2-[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="+38-066-123-1234">
@@ -180,7 +181,7 @@
       <div class="masters">
         <div class="container">
           <div class="masters__blocks">
-            <h1 class="masters__blocks_title">Наши мастера</h1>
+            <h1 class="masters__blocks_title"><span class="masters__span">Н</span>аши мастера</h1>
             <div class="masters__blocks_wrap">
               <div class="masters__blocks_item">
                 <img src="images/our-master.png" alt="Мастер Сергей">
@@ -216,7 +217,7 @@
         <div class="container">
 
           <div class="about__us">
-            <div class="about__us_title">Пару слов о нашей работе</div>
+            <div class="about__us_title"><span class="about__span">П</span>ару слов о нашей работе</div>
             <div class="about__us_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
               laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
@@ -394,12 +395,12 @@
     <section>
       <div class="container">
         <div class="advant">
-          <h3 class="advant__title">Наши преимущества</h3>
+          <h3 class="advant__title"><span class="advant__span">Н</span>аши преимущества</h3>
           <div class="advant__wrap">
 
             <div class="advant__item">
               <div class="advant__img_wrap">
-                <img src="images/svg/01-car.svg" alt="">
+                <img src="images/svg/01-car.svg" alt="car">
               </div><!-- advant__img_wrap-->
               <div class="advant__item_title">Бесплатный выезд</div>
               <div class="advant__item_desc">Мастер приедет по адресу и проведет расчет стоимости работ совершенно
@@ -408,7 +409,7 @@
 
             <div class="advant__item">
               <div class="advant__img_wrap">
-                <img src="images/svg/02-engineers.svg" alt="">
+                <img src="images/svg/02-engineers.svg" alt="engineers">
               </div><!-- advant__img_wrap-->
               <div class="advant__item_title">Богатый опыт работы</div>
               <div class="advant__item_desc">Наши мастера обладают двенадцатилетним опытом устранения сантехнических
@@ -417,7 +418,7 @@
 
             <div class="advant__item">
               <div class="advant__img_wrap">
-                <img src="images/svg/03-runer-silhouette-running-fast.svg" alt="">
+                <img src="images/svg/03-runer-silhouette-running-fast.svg" alt="fast">
               </div><!-- advant__img_wrap-->
               <div class="advant__item_title">Оперативность</div>
               <div class="advant__item_desc">Среднее время между обращением и выездом мастера у нас - всего 45 минут
@@ -427,7 +428,7 @@
 
             <div class="advant__item">
               <div class="advant__img_wrap">
-                <img src="images/svg/04-pipe.svg" alt="">
+                <img src="images/svg/04-pipe.svg" alt="pipe">
               </div><!-- advant__img_wrap-->
               <div class="advant__item_title">Поможем с закупкой</div>
               <div class="advant__item_desc">Если для устранения проблемы нужны расходные материалы - мастер сам
@@ -490,9 +491,9 @@
             <div class="footer-hr"></div>
             <div class="footer__block_menu">
               <ul class="footer-menu-list">
-                <li class="footer-menu__link"><a href="#!"><span>Главная</span></a></li>
-                <li class="footer-menu__link"><a href="#!"><span>услуги </span></a></li>
-                <li class="footer-menu__link"><a href="#!"><span>Контакты</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>Главная</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>услуги </span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>Контакты</span></a></li>
               </ul>
 
             </div>
@@ -503,15 +504,15 @@
 
             <div class="footer__block_menu">
               <ul class="footer-menu-list">
-                <li class="footer-menu__link"><a href="#!"><span>очистка засоров</span></a></li>
-                <li class="footer-menu__link"><a href="#!"><span>установка сантехники</span></a></li>
-                <li class="footer-menu__link"><a href="#!"><span>герметизация</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>очистка засоров</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>установка сантехники</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>герметизация</span></a></li>
               </ul>
 
               <ul class="footer-menu-list">
-                <li class="footer-menu__link"><a href="#!"><span>очистка засоров</span></a></li>
-                <li class="footer-menu__link"><a href="#!"><span>установка сантехники</span></a></li>
-                <li class="footer-menu__link"><a href="#!"><span>герметизация</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>очистка засоров</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>установка сантехники</span></a></li>
+                <li class="footer-menu__link"><a href="#"><span>герметизация</span></a></li>
               </ul>
             </div>
           </div><!-- footer-block-->
@@ -526,16 +527,16 @@
               </div>
               <div class="footer__block_form_title">Мы в соцсетях:</div>
               <div class="footer__form_img">
-                <a href="#!">
+                <a href="#">
                   <span class="form__imges"> <img src="images/svg/vk.svg" width="18" height="18" alt="Вконтакте"></span>
                 </a>
 
-                <a href="#!">
+                <a href="#">
                   <span class="form__imges"> <img src="images/svg/facebook.svg" width="18" height="18"
                       alt="Фейсбук"></span>
                 </a>
 
-                <a href="#!">
+                <a href="#">
                   <span class="form__imges"> <img src="images/svg/instagram.svg" width="18" height="18"
                       alt="Инстаграмм"></span>
                 </a>
@@ -551,8 +552,8 @@
           <div class="copiryght__wrap">
             <div class="copiryght__text">Все права защищены. © 2021</div>
             <div class="copiryght__link">
-              <a href="#!"> <span>Политика конфиденциальности</span> </a>
-              <a href="#!"> <span>Файлы cookie</span> </a>
+              <a href="#"> <span>Политика конфиденциальности</span> </a>
+              <a href="#"> <span>Файлы cookie</span> </a>
             </div>
           </div>
         </div><!-- container-->
@@ -562,32 +563,8 @@
     </footer>
     <!-- ====================КОНЕЦ FOOTER================== -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </div><!-- wrapper -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
   <script src="js/main.min.js" rel="preload" defer></script>
 </body>
 
