--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
               </div>
             </div>
 
-
             <div class="header__text">
               <p>Устраним любую сантехническую проблему! Оперативный<span class="header__text-bit"> выезд в течение 45
                   минут.</span> </p>
@@ -41,8 +40,6 @@
               <a href="tel:+88001234567">8 800 <span>12- 34- 567</span></a>
               <p class="header__phone-text">Режим работы: 10:00 - 21:00</p>
             </div>
-
-
 
             <a href="#" class="header__button-link">
               <div class="header__button-text">заказать звонок </div>
@@ -60,11 +57,8 @@
 
       </div> <!-- container -->
 
-
       <div class="hr__line"></div>
       <div class='container'>
-
-
         <!-- ===========NAV MENU -->
 
         <nav class="menu">
@@ -72,8 +66,7 @@
           <div class="menu__wrap">
             <ul class="menu__list">
               <li><a href="#" class="menu__link "><span>Главная</span></a></li>
-              <li class=" link-ower "><a href="#" data-ower="close-menu"
-                  class="menu__link menu__link_show"><span>услуги
+              <li class=" link-ower "><a href="#" data-ower="close-menu" class="menu__link menu__link_show"><span>услуги
                     &nbsp;<img src="images/svg/arrow.svg" width="12" height="12" alt="Arrow"></span></a>
 
                 <div class="menu__one">
@@ -81,7 +74,6 @@
 
                     <li><a href="#" class="menu__link"><span data-close="close-link">Наименование услуги
                           1</span></a></li>
-
 
                     <li class="menu__one_ower_two"><a href="#"
                         class="menu__link  menu__link_show_two"><span>Наименование
@@ -106,22 +98,18 @@
 
                     </li>
 
-
                     <li><a href="#" class="menu__link"><span data-close="close-link">Наименование услуги
                           3</span></a></li>
 
                     <li><a href="#" class="menu__link"><span data-close="close-link">Наименование услуги
                           4</span></a></li>
 
-
                   </ul>
                 </div><!-- menu__one -->
               </li>
-
               <li><a href="#" class="menu__link"><span>очистка засоров</span></a></li>
               <li><a href="#" class="menu__link"><span>установка сантехники</span></a></li>
               <li><a href="#" class="menu__link"><span>герметизация</span></a></li>
-
             </ul>
 
           </div> <!-- menu__wrap-->
@@ -132,12 +120,10 @@
           <div class="header__form_title">Заказать выезд мастера</div>
           <p class="header__form_desc">Просто оставьте свои контакты: мастер сам перезвонит в кратчайшие сроки!</p>
           <form action="#" name="master" class="header__form_block">
-
             <input type="text" name="name" placeholder="Ваше имя">
             <input type="tel" name="phone" pattern="+2-[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="+38-066-123-1234">
             <textarea name=" Сообщение" placeholder="Задайте любой интересующий Вас вопрос"></textarea>
             <button type="submit" class="header__form_submit">Заказать выезд</button>
-
           </form>
 
         </div><!-- header-form -->
@@ -145,7 +131,6 @@
         <div class="header__img_background">
           <img src="images/header-master.png" alt="master" class="header__img_first">
           <img src="images/header-master2.png" alt="master" class="header__img_last">
-
         </div>
       </div> <!-- container -->
     </header>
@@ -173,7 +158,6 @@
         </div><!-- popap -->
       </div><!-- container -->
     </section>
-
     <!-- ====================END POPAP PHONE ================== -->
 
     <!-- ====================НАШИ МАСТЕРА================== -->
@@ -206,16 +190,13 @@
                 <div class="masters__blocks_item_title">Сергей Иванов</div>
                 <div class="masters__blocks_item_desc">Услуги сантехника могут потребоваться при самых разных
                   обстоятельствах: на этапе возведения объекта, при капитальном ремонте или же на бытовом уровне.</div>
-
               </div><!-- masters__blocks_item -->
             </div>
-
           </div><!-- masters__blocks -->
         </div><!-- container -->
 
         <div class="hr__line"></div>
         <div class="container">
-
           <div class="about__us">
             <div class="about__us_title"><span class="about__span">П</span>ару слов о нашей работе</div>
             <div class="about__us_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -223,9 +204,7 @@
               laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
               esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
               qui officia deserunt mollit anim id est laborum.</div>
-
           </div>
-
         </div><!-- container -->
       </div><!-- masters -->
     </section>
@@ -244,14 +223,11 @@
         </div>
       </div><!-- reviews__bg -->
       <div class="container">
-
         <div class="reviews">
           <div class="reviews__blocks_item">
             <h2 class="reviews__blocks_item_title">Отзывы довольных клиентов</h2>
-
           </div>
           <div class="reviews__blocks">
-
             <div class="reviews__blocks_wrap">
               <div class="reviews__blocks_bit">
                 <img src="images/riviews.png" alt="reviews">
@@ -261,7 +237,6 @@
                 <div class="reviews__blocks_bit_desc">Ребята порадовали быстрым выездом и отличным качеством работы. В
                   следующий раз буду обращаться строго к ним! Ребята порадовали быстрым выездом и отличным качеством
                   работы. </div>
-
                 <div class="reviews__bottom">
                   <div class="reviews__hr"></div>
                   <div class="reviews__rating">Оценка:</div>
@@ -273,9 +248,7 @@
                       class="rating__img" src="images/svg/star.svg" width="20" height="20" alt="rating">
                   </div>
                 </div><!-- reviews__bottom -->
-
               </div><!-- reviews__blocks_bit -->
-
               <div class="reviews__blocks_bit">
                 <img src="images/riviews.png" alt="reviews">
                 <div class="reviews__blocks_bit_title">
@@ -283,8 +256,6 @@
                 </div>
                 <div class="reviews__blocks_bit_desc">Ребята порадовали быстрым выездом и отличным качеством работы. В
                   следующий раз буду обращаться строго к ним!</div>
-
-
                 <div class="reviews__bottom">
                   <div class="reviews__hr"></div>
                   <div class="reviews__rating">Оценка:</div>
@@ -378,18 +349,12 @@
                   </div>
                 </div><!-- reviews__bottom -->
               </div><!-- reviews__blocks_bit -->
-
             </div><!-- reviews__blocks_wrap -->
           </div><!-- reviews__blocks -->
-
         </div><!-- reviews -->
       </div> <!-- container -->
-
     </section>
-
-
     <!-- ====================КОНЕЦ ОТЗЫВЫ================== -->
-
 
     <!-- ====================ПРЕИМУЩЕСТВА================== -->
     <section>
@@ -434,11 +399,7 @@
               <div class="advant__item_desc">Если для устранения проблемы нужны расходные материалы - мастер сам
                 привезет все необходимое
               </div><!-- advant__item-->
-
-
             </div>
-
-
           </div><!-- advant__wrap-->
 
           <div class="advant__map">
@@ -451,17 +412,12 @@
               </div>
               <div class="advant__hr"></div>
               <div class="advant__phone">
-
                 <img src="images/svg/phone.svg" width="14" height="14" alt="Phone">
                 <a href="tel:+88001234567">8 800 <span>12- 34- 567</span></a>
                 <p class="advant__phone_text">Режим работы: 10:00 - 21:00</p>
               </div>
-
-
             </div>
           </div>
-
-
         </div> <!-- advant -->
       </div><!-- container -->
     </section>
@@ -495,13 +451,11 @@
                 <li class="footer-menu__link"><a href="#"><span>услуги </span></a></li>
                 <li class="footer-menu__link"><a href="#"><span>Контакты</span></a></li>
               </ul>
-
             </div>
           </div><!-- footer-block-->
 
           <div class="footer__block block-two">
             <div class="footer__block_title">Наши услуги:</div>
-
             <div class="footer__block_menu">
               <ul class="footer-menu-list">
                 <li class="footer-menu__link"><a href="#"><span>очистка засоров</span></a></li>
@@ -543,7 +497,6 @@
               </div>
             </div><!-- footer__block_form -->
           </div><!-- footer-block-->
-
         </div><!-- footer-body-->
       </div><!-- container-->
 
@@ -558,8 +511,6 @@
           </div>
         </div><!-- container-->
       </div><!-- copiryght-->
-
-
     </footer>
     <!-- ====================КОНЕЦ FOOTER================== -->
 
